--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -6,9 +6,9 @@
 
 
 // Our variables
-$base-font-family: 'Fira Sans', sans-serif;
-$secondary-font-family: 'Oswald', sans-serif;
-$monospace-font-family: "Fira Mono", monospace;
+$base-font-family: 'Fira Sans', 'Ubuntu', sans-serif;
+$secondary-font-family: 'Oswald', 'Ubuntu Condensed', 'Impact', sans-serif;
+$monospace-font-family: 'Fira Mono', 'Ubuntu Mono', monospace;
 $base-font-size:   18px;
 $base-font-weight: 400;
 $small-font-size:  90%;
