Add code examples for FSM post part 2

--- a/src/_sass/_syntax-highlighting.scss
+++ b/src/_sass/_syntax-highlighting.scss
@@ -67,7 +67,7 @@ pre, code {
   }
 }
 
-code span.kw { color: #222; } /* Keyword */
+code span.kw { color: #222; font-weight: 600; } /* Keyword */
 code span.dt { color: #0074de; } /* DataType */
 code span.dv { color: #009999; } /* DecVal */
 code span.bn { color: #009999; } /* BaseN */
