--- a/src/_sass/_base.scss
+++ b/src/_sass/_base.scss
@@ -44,13 +44,15 @@ body {
 /**
  * Set `margin-bottom` to maintain vertical rhythm
  */
-p, blockquote, pre,
+blockquote, pre,
 ul, ol, dl, figure,
 %vertical-rhythm {
-  margin-bottom: 1em;
+  margin-bottom: $spacing-unit;
 }
 
-
+p {
+  margin-bottom: 1em;
+}
 
 /**
  * Images
