Last pre-review polish on post, and some other fixes

--- a/src/_layouts/post.html
+++ b/src/_layouts/post.html
@@ -26,6 +26,13 @@ layout: default
         {{ content }}
       </div>
 
+      <p class="follow-twitter">
+          If you want to get updates around my writing and software
+          projects, I recommend you <a
+          href="https://twitter.com/owickstrom">follow me on
+          Twitter</a>.
+      </p>
+
       <a id="post-comments-link"
          href="{{ post.url }}#disqus_thread"
          data-disqus-identifier="{{page.slug}}">
