Add link to part 2

--- a/src/_layouts/post.html
+++ b/src/_layouts/post.html
@@ -27,7 +27,7 @@ layout: default
       </div>
 
       <p class="follow-twitter">
-          If you want to get updates around my writing and software
+          If you want to get updates on my writing and software
           projects, I recommend you <a
           href="https://twitter.com/owickstrom">follow me on
           Twitter</a>.
