--- a/src/_sass/_base.scss
+++ b/src/_sass/_base.scss
@@ -164,7 +164,7 @@ code {
 
 pre {
   padding: ($base-line-height * 0.5rem);
-  margin: 0 0 ($base-line-height * 1rem);
+  margin: ($base-line-height * 1rem) 0;
   overflow-x: auto;
 }
 
