Expand code snippets on mobile display size

--- a/src/_sass/_layout.scss
+++ b/src/_sass/_layout.scss
@@ -395,6 +395,13 @@ div.sourceCode {
   }
 }
 
+@include media-query($on-palm) {
+  div.sourceCode {
+    margin-left: -1rem;
+    margin-right: -1rem;
+  }
+}
+
 .index-heading {
   position: absolute;
   text-indent: -9999px;
