--- a/src/_layouts/page.html
+++ b/src/_layouts/page.html
@@ -12,7 +12,7 @@ layout: default
         <h1 class="page-title" itemprop="name headline">{{ page.title }}</h1>
       </header>
 
-      <div class="page-content" itemprop="mainContentOfPage">
+      <div class="main-content" itemprop="mainContentOfPage">
         {{ content }}
       </div>
     </article>
