Add first draft on screencast video editor

--- a/src/_sass/_layout.scss
+++ b/src/_sass/_layout.scss
@@ -399,7 +399,7 @@ div.sourceCode {
 .post-content figure {
     img {
       display: block;
-      margin: 1em auto;
+      margin: 1.5em auto 1em auto;
     }
     a {
       text-align: center;
