--- a/src/_sass/_base.scss
+++ b/src/_sass/_base.scss
@@ -107,8 +107,13 @@ h2 {
   font-size: 150%;
 }
 
-h3, h4, h5, h6 {
+h3 {
   font-size: 120%;
+}
+
+h4, h5, h6 {
+  font-size: 95%;
+  text-transform: uppercase;
 }
 
 /**
