New design and no google fonts

--- a/src/_includes/nav.html
+++ b/src/_includes/nav.html
@@ -1,11 +1,6 @@
 <nav class="top-nav">
   <div class="wrapper">
-    <a href="{{ site.baseurl }}/" class="home">
-      <img src="{{ site.baseurl }}/assets/logo.png"
-          srcset="{{ site.baseurl }}/assets/logo.png 1x,
-          {{ site.baseurl }}/assets/logo@2x.png 2x"
-          alt="FUNC DA WORLD">
-    </a>
+    <a href="{{ site.baseurl }}/" class="home">wickstom.tech</a>
     <div class="nav">
       <ul>
         {% include nav-items.html %}
