--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -6,8 +6,8 @@
 
 
 // Our variables
-$base-font-family: 'Source Sans Pro', 'Ubuntu', sans-serif;
-$secondary-font-family: 'Oswald', 'Ubuntu Condensed', 'Impact', sans-serif;
+$base-font-family: 'Linux Libertine', serif;
+$secondary-font-family: 'Linux Biolinum', sans-serif;
 $monospace-font-family: 'Iosevka', 'Ubuntu Mono', monospace;
 $base-font-size:   18px;
 $base-font-weight: 400;
@@ -17,8 +17,8 @@ $code-background-color: #fff9de;
 
 $spacing-unit:     2rem;
 
-$brand-color:      #e81c4f;
-$text-color:       #222222;
+$brand-color:      #656b49;
+$text-color:       #333;
 $background-color: #fff;
 
 $grey-color:       #aaa;
