--- a/src/_includes/footer.html
+++ b/src/_includes/footer.html
@@ -1,7 +1,7 @@
 <footer class="site-footer">
 
   <div class="wrapper">
-    <p><a class="rss-subscribe" href="{{ "/feed.xml" | prepend: site.baseurl }}">Subscribe via RSS</a></p>
+    <p><a class="rss-subscribe" href="{{ "/feed.xml" | prepend: site.baseurl }}">Subscribe the blog via RSS</a></p>
     <p class="copyright">
     Copyright &copy; 2015-{{ 'now' | date: "%Y" }} Oskar Wickström
     &mdash;
