--- a/src/_includes/head.html
+++ b/src/_includes/head.html
@@ -10,13 +10,11 @@
 
   <link rel="apple-touch-icon" href="touch-icon-iphone.png">
   <link rel="apple-touch-icon" sizes="48x48" href="{{ "/assets/icon.png" | prepend: site.baseurl }}">
-  <link rel="apple-touch-icon" sizes="857x857" href="{{ "/assets/square.png" | prepend: site.baseurl }}">
-  <link rel="apple-touch-icon" sizes="1712x1712" href="{{ "/assets/square@2x.png" | prepend: site.baseurl }}">
 
+  <link rel="stylesheet" href="{{ "/css/fonts.css" | prepend: site.baseurl }}">
   <link rel="stylesheet" href="{{ "/css/main.css" | prepend: site.baseurl }}">
   <link rel="stylesheet" media="print" href="{{ "/css/print.css" | prepend: site.baseurl }}">
 
-  <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,400i|Oswald:400,600" rel="stylesheet">
   <link rel="stylesheet" href="/assets/iosevka/iosevka.css">
 
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
@@ -37,5 +35,4 @@
   {% else %}
   <meta name="twitter:description" content="{{ site.description }}">
   {% endif %}
-  <meta name="twitter:image:src" content="{{ site.url }}/assets/square.png">
 </head>
