--- a/src/_includes/footer.html
+++ b/src/_includes/footer.html
@@ -2,11 +2,17 @@
 
   <div class="wrapper">
     <p><a class="rss-subscribe" href="{{ "/feed.xml" | prepend: site.baseurl }}">Subscribe the blog via RSS</a></p>
+    <p>
+      Fonts:
+       <a href="/assets/libertine/LICENSE.txt">Linux Libertine & Linux Biolinum</a>,
+       <a href="https://raw.githubusercontent.com/be5invis/Iosevka/master/LICENSE.md">Iosevka</a>
+    </p>
     <p class="copyright">
     Copyright &copy; 2015-{{ 'now' | date: "%Y" }} Oskar Wickström
     &mdash;
     <a href="https://raw.githubusercontent.com/owickstrom/func-da-world/master/LICENSE">License</a>
     </p>
+
   </div>
 
 </footer>
