--- a/src/_sass/_layout.scss
+++ b/src/_sass/_layout.scss
@@ -280,6 +280,11 @@ body {
   }
 }
 
+div.sourceCode {
+    padding: .5em 1em;
+    margin: 0;
+}
+
 @include media-query($on-palm) {
   div.sourceCode {
     margin-left: -1rem;
