--- a/src/_layouts/post.html
+++ b/src/_layouts/post.html
@@ -15,7 +15,7 @@ layout: default
           {% assign category = page.categories | first %}
           {% if category %}
           <span class="category">
-            <a href="{{ site.baseurl }}/{{ category }}">{{category | replace: '-', ' ' | capitalize_all }}</a>
+            <a href="{{ site.baseurl }}/{{ category }}/index.html">{{category | replace: '-', ' ' | capitalize_all }}</a>
           </span>
           {% include read_time.html %}
           {% endif %}
