--- a/src/_sass/_layout.scss
+++ b/src/_sass/_layout.scss
@@ -79,6 +79,9 @@ body {
     }
   }
 }
+.footnote-back {
+  margin-left: .25em;
+}
 
 @media screen and (max-width: $on-palm) {
   .top-nav .nav ul a {
