--- a/src/_includes/head.html
+++ b/src/_includes/head.html
@@ -36,6 +36,9 @@
   <meta name="twitter:description" content="{{ site.description }}">
   {% endif %}
 
+
+  <script src='https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/MathJax.js?config=TeX-MML-AM_CHTML' async></script>
+
   {% if site.local %}
   <script src="http://localhost:35729/livereload.js"></script>
   {% endif %}
