Filter and typo fix

--- a/src/_includes/nav.html
+++ b/src/_includes/nav.html
@@ -1,6 +1,6 @@
 <nav class="top-nav">
   <div class="wrapper">
-    <a href="{{ site.baseurl }}/" class="home">wickstom.tech</a>
+    <a href="{{ site.baseurl }}/" class="home">wickstrom.tech</a>
     <div class="nav">
       <ul>
         {% include nav-items.html %}
