--- a/src/_sass/_syntax-highlighting.scss
+++ b/src/_sass/_syntax-highlighting.scss
@@ -93,6 +93,12 @@ code span.at { color: inherit; } /* Attribute */
 code span.re { color: inherit; } /* RegionMarker */
 code span.in { color: inherit; } /* Information */
 code span.wa { color: inherit; } /* Warning */
-code span.al { color: inherit; font-weight: bold; } /* Alert */
+code span.al { color: inherit; } /* Alert */
 code span.er { color: inherit; } /* Error */
 code span { color: inherit; } /* Normal */
+
+.hedgehog {
+    code span.wa { color: #aa6a27; font-weight: bold; } /* Warning */
+    code span.al { color: #2f7300; font-weight: bold; } /* Alert */
+    code span.er { color: #bd2222; font-weight: bold; } /* Error */
+}
