--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -8,7 +8,7 @@
 // Our variables
 $base-font-family: 'Linux Libertine', serif;
 $secondary-font-family: 'Linux Biolinum', sans-serif;
-$monospace-font-family: 'Iosevka SS09', 'Ubuntu Mono', monospace;
+$monospace-font-family: 'Iosevka Terminal', 'Ubuntu Mono', monospace;
 $base-font-size:   20px;
 $base-font-weight: 400;
 $small-font-size:  90%;
