--- a/src/_sass/_base.scss
+++ b/src/_sass/_base.scss
@@ -183,14 +183,23 @@ p code, li code {
 table {
     border-spacing: 0;
     border-collapse: separate;
+    margin: 1em 0 2em;
 }
 table th {
     border-bottom: 1px solid $text-color;
 }
+table td {
+    border-bottom: 1px solid lighten($text-color, 65%);
+}
+
+table ul, table ol {
+  margin: 0;
+}
 
 table th,
 table td {
-    padding: .25rem;
+    padding: .5rem;
+    text-align: left;
 }
 
 hr {
@@ -208,6 +217,28 @@ hr {
     font-size: 200%;
     font-family: $monospace-font-family;
   }
+}
+
+dl {
+  margin: 1em 0;
+}
+
+dt {
+  font-weight: 600;
+}
+
+dd {
+  margin: 0.5em 1em 1.5em;
+}
+
+kbd {
+  display: inline-block;
+  font-size: 0.75rem;
+  font-family: $monospace-font-family;
+  border: 1px solid $text-color;
+  border-radius: 2px;
+  padding: 2px 4px;
+  line-height: 1;
 }
 
 /**
