--- a/blog/src/_includes/nav.html
+++ b/blog/src/_includes/nav.html
@@ -1,6 +1,6 @@
 <nav class="top-nav">
   <div class="wrapper">
-    <a href="{{ site.baseurl }}/" class="home">wickstrom.tech</a>
+    <a href="{{ site.baseurl }}/" class="home">{{ site.title }}</a>
     <div class="nav">
       <ul>
         {% include nav-items.html %}
