--- a/blog/src/css/main.scss
+++ b/blog/src/css/main.scss
@@ -17,11 +17,12 @@ $code-background-color: #fff9de;
 
 $spacing-unit:     2rem;
 
-$brand-color:      #656b49;
+$link-color:       #4433dd;
+$link-visited-color:       #9900bb;
 $text-color:       #333;
 $background-color: #fff;
 
-$grey-color:       #aaa;
+$grey-color:       #666;
 $grey-color-light: #f0f0f0;
 $grey-color-dark:  darken($grey-color, 25%);
 
