--- a/blog/src/_layouts/category.html
+++ b/blog/src/_layouts/category.html
@@ -17,18 +17,14 @@ layout: default
         <ul class="post-list">
           {% for post in site.categories[page.category] %}
           <li{% if post.published == false %} class="draft"{% endif %}>
-            <div class="title-and-excerpt">
-                <h2 class="title">
-                    <a href="{{ post.url | prepend: site.baseurl }}">{{ post.title }}</a>
-                </h2>
-                <p class="excerpt">{{ post.excerpt }}</p>
+            <h2 class="title">
+                <a href="{{ post.url | prepend: site.baseurl }}">{{ post.title }}</a>
+            </h2>
+            <div class="post-meta">
+                <time datetime="{{ post.date | date_to_xmlschema }}" itemprop="datePublished">{{ post.date | date: "%B %-d, %Y" }}</time>
+                by <span itemprop="author" itemtype="http://schema.org/Person">{{post.author}}</span>
             </div>
-            <time>
-                <a href="{{ post.url | prepend: site.baseurl }}">
-                    <span class="day">{{ post.date | date: '%b %d'}}</span>
-                    <span class="year">{{ post.date | date: '%Y'}}</span>
-                </a
-            </time>
+            <p class="excerpt">{{ post.excerpt }}</p>
           </li>
         {% endfor %}
         </ul>
