--- a/blog/src/_layouts/post.html
+++ b/blog/src/_layouts/post.html
@@ -12,6 +12,7 @@ layout: default
         <h1 class="page-title post-title" itemprop="name headline">{{ page.title }}</h1>
         <p class="post-meta">
           <time datetime="{{ page.date | date_to_xmlschema }}" itemprop="datePublished">{{ page.date | date: "%B %-d, %Y" }}</time>
+          by <span itemprop="author" itemtype="http://schema.org/Person">{{page.author}}</span>
           {% assign category = page.categories | first %}
           {% if category %}
           <span class="category">
