Restore category titles

--- a/blog/src/_layouts/page.html
+++ b/blog/src/_layouts/page.html
@@ -7,7 +7,7 @@ layout: default
 <div class="page-content">
   <div class="wrapper">
     <article class="page" itemscope itemtype="http://schema.org/WebPage">
-      <h1 class="page-title" itemprop="name headline">{{ page.title }}</h1>
+      <h1 class="page-title hidden" itemprop="name headline">{{ page.title }}</h1>
       <div class="main-content" itemprop="mainContentOfPage">
         {{ content }}
       </div>
