--- a/blog/src/_layouts/post.html
+++ b/blog/src/_layouts/post.html
@@ -9,7 +9,7 @@ layout: default
     <article class="post" itemscope itemtype="http://schema.org/BlogPosting">
 
       <header class="page-header post-header">
-        <h1 class="post-title" itemprop="name headline">{{ page.title }}</h1>
+        <h1 class="page-title post-title" itemprop="name headline">{{ page.title }}</h1>
         <p class="post-meta">
           <time datetime="{{ page.date | date_to_xmlschema }}" itemprop="datePublished">{{ page.date | date: "%B %-d, %Y" }}</time>
           {% assign category = page.categories | first %}
