--- a/blog/src/_layouts/post.html
+++ b/blog/src/_layouts/post.html
@@ -14,11 +14,9 @@ layout: default
           <time datetime="{{ page.date | date_to_xmlschema }}" itemprop="datePublished">{{ page.date | date: "%B %-d, %Y" }}</time>
           {% assign category = page.categories | first %}
           {% if category %}
-          <span class="category">
-            <a href="{{ site.baseurl }}/{{ category }}/index.html">{{category | replace: '-', ' ' | capitalize_all }}</a>
-          </span>
-          {% include read_time.html %}
+          <span class="category"><a href="{{ site.baseurl }}/{{ category }}/index.html">{{category | replace: '-', ' ' | capitalize_all }}</a></span>
           {% endif %}
+          {% include read_time.html %}
         </p>
       </header>
 
